# mega-vault-viewer

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release-macos.yml  windows.yml
.go/: architecture-principles.json  hierarchy.json  project.json  vision.json
.go/evidence/: events.jsonl
.go/runs/: events.jsonl
.go/tasks/done/: migrate-go-contract-v035.json  mvv-codex-update-instructions.json  mvv-compact-left-setup-chrome.json  mvv-daily-live-ai-ingest-contract.json  mvv-edit-actions-header.json  mvv-edit-mode-scrollbar-design.json  mvv-fix-packaged-logo-assets.json  mvv-jsonl-vault-runtime.json  mvv-linux-appimage-build.json  mvv-macos-install-update.json  mvv-navigation-data-ux-redesign.json  mvv-obsidian-style-reader-shell.json  mvv-outline-and-large-jsonl-preview.json  mvv-query-search-nav-overhaul.json  mvv-reader-shell-ux.json  mvv-remove-sidebar-nav-strip.json  mvv-repo-complete-go.json  mvv-sync-performance-blobs.json  mvv-vault-mark-logo.json
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: edit-session.test.ts  edit-session.ts  main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/mvv-core/: Cargo.toml
crates/mvv-core/examples/: index_vault.rs
crates/mvv-core/src/: lib.rs
crates/mvv-core/tests/: minimal_starter_smoke.rs  runtime_flow.rs
docs/: architecture.md  codex-macos-install-update.md  github-publishing.md  public-readiness.md  release.md  vision.json  vision.md  visual-assets.md
docs/release-notes/: v0.1.0.md
fixtures/demo-vault/10_notes/2026-06/: 20260617-0900-alpha.md  20260617-0915-beta.md
fixtures/reader-vault/10_notes/2026-06/: 20260621-1700-reader-quality.md  20260621-1705-reader-frontmatter-edge.md
scripts/: install-macos.sh  smoke-minimal-starter.mjs  tauri-build.mjs
