[workspace]
members = [
  "crates/mvv-core",
  "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.12"
regex = "1.11"
notify = "8.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tantivy = "0.25"
tempfile = "3.13"
thiserror = "2.0"
walkdir = "2.5"
