[package]
name = "mega-vault-viewer"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "mega_vault_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
mvv-core = { path = "../../../crates/mvv-core" }
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
